name:                ipython-kernel
version:             0.11.0.0
synopsis:            A library for creating kernels for IPython frontends

description:         ipython-kernel is a library for communicating with frontends for the interactive IPython framework. It is used extensively in IHaskell, the interactive Haskell environment.
homepage:            http://github.com/gibiansky/IHaskell
license:             MIT
license-file:        LICENSE
author:              Andrew Gibiansky
maintainer:          andrew.gibiansky@gmail.com

category:            Development
build-type:          Simple

cabal-version:       1.16

data-dir:            example-data
data-files:          calc_profile.tar


flag examples
  description: Build example programs
  default:     False


library
  ghc-options:         -Wall

  exposed-modules: IHaskell.IPython.Kernel
                   IHaskell.IPython.Types
                   IHaskell.IPython.ZeroMQ
                   IHaskell.IPython.Message.Parser
                   IHaskell.IPython.Message.UUID
                   IHaskell.IPython.EasyKernel
  other-extensions:    OverloadedStrings
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base                 >=4.9 && <5,
                       aeson           ,
                       binary          ,
                       bytestring      ,
                       containers      ,
                       cryptonite      ,
                       directory       ,
                       temporary       ,
                       filepath        ,
                       process         ,
                       memory          ,
                       text            ,
                       transformers    ,
                       unordered-containers,
                       uuid            ,
                       zeromq4-haskell ,
                       parsec

-- Example program
executable simple-calc-example
  hs-source-dirs:   examples
  main-is:          Calc.hs
  default-language: Haskell2010
  build-depends:    ipython-kernel ,
                    base           ,
                    filepath       ,
                    parsec         ,
                    text           ,
                    transformers

  if !flag(examples)
    buildable: False

executable fun-calc-example
  hs-source-dirs:   examples
  main-is:          Simple.hs
  default-language: Haskell2010
  build-depends:    ipython-kernel ,
                    base           ,
                    filepath       ,
                    parsec         ,
                    text           ,
                    transformers

  if !flag(examples)
    buildable: False
