-- The name of the package.
name:                ihaskell-aeson

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.3.0.1

-- A short (one-line) description of the package.
synopsis:            IHaskell display instances for Aeson

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:            http://www.github.com/gibiansky/ihaskell

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Andrew Gibiansky

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          andrew.gibiansky@gmail.com

-- A copyright notice.
-- copyright:

category:            Development

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       1.16

library
  -- Modules exported by the library.
  exposed-modules:     IHaskell.Display.Aeson

  -- Modules included in this library but not exported.
  -- other-modules:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.9 && <5,
                       text,
                       bytestring,
                       aeson >= 0.7,
                       aeson-pretty >= 0.7,
                       ihaskell >= 0.5

  -- Directories containing source files.
  -- hs-source-dirs:

  -- Base language which the package is written in.
  default-language:    Haskell2010
