name:                ihaskell-hatex
version:             0.2.1.0
synopsis:            IHaskell display instances for hatex
-- description:         
homepage:            http://www.github.com/gibiansky/IHaskell
license:             MIT
license-file:        LICENSE
author:              Adam Vogt
maintainer:          andrew.gibiansky@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.16


library
  exposed-modules:     IHaskell.Display.Hatex
  build-depends:       base >=4.6 && <4.9,
                       text,
                       HaTeX >= 3.9,
                       ihaskell >= 0.5
  default-language:    Haskell2010
  
