name:                ihaskell-rlangqq
version:             0.3.0.0
synopsis:            a rDisp quasiquote to show plots from Rlang-QQ in IHaskell 
license:             BSD3
license-file:        LICENSE
author:              Adam Vogt <vogt.adam@gmail.com>
maintainer:          Adam Vogt <vogt.adam@gmail.com>
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     IHaskell.Display.Rlangqq
  other-extensions:    TupleSections, TemplateHaskell
  build-depends:       base <5,
                       Rlang-QQ >= 0.3,
                       directory >=1.2 && <1.3,
                       filepath >=1.3 && <1.5,
                       bytestring >=0.10 && <0.11,
                       base64-bytestring >=1.0 && <1.1,
                       ihaskell >= 0.6.2,
                       ihaskell-blaze >=0.3 && <0.4,
                       blaze-html >=0.6 && <0.9,
                       split >=0.2 && <0.3,
                       stm   -any,
                       xformat >=0.1 && <0.2,
                       template-haskell >= 2.8
  default-language:    Haskell2010
